bad/func_call_invalid_arg_conversion_array_to_array.example_compiler_output
ERROR
[1mbad/func_call_invalid_arg_conversion_array_to_array.lat:6:6: [1;31merror: [0;1mvalue of type `Y[]` is not convertible to type `X[]`[m
	foo(new Y[4]);
	    [1;32m^[m
[1mbad/func_call_invalid_arg_conversion_array_to_array.lat:10:1: [1;34mnote: [0;1m`foo` declared here[m
void foo(X[] a) {}
[1;32m^[m
